fix resize pronlem on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,12 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+#ar-container {
+  top: 0;
+  left: 0;
+  position: absolute;
+  overflow: hidden;
+  width: 100%;
+  height: 100%;
+}
